--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,2 @@
 <h1>About Us</h1>
-<p>Finnaly you finished most easy way Deploy your Ruby on Rails On your own Server. </p>
+<p>Finnaly you finished most easiest way Deploy your Ruby on Rails Application On your own Server. </p>
